samples/_failures_safe/1761208397_345c64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1aa138a.c: In function ‘main’:
./samples/SAFE/__tmp_d1aa138a.c:153:26: error: missing terminating " character
  153 |     int rows1 = read_int("Enter rows for first matrix (1-
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1aa138a.c:153:5: error: expected expression at end of input
  153 |     int rows1 = read_int("Enter rows for first matrix (1-
      |     ^~~
./samples/SAFE/__tmp_d1aa138a.c:153:17: error: too few arguments to function ‘read_int’
  153 |     int rows1 = read_int("Enter rows for first matrix (1-
      |                 ^~~~~~~~
./samples/SAFE/__tmp_d1aa138a.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d1aa138a.c:153:5: error: expected declaration or statement at end of input
  153 |     int rows1 = read_int("Enter rows for first matrix (1-
      |     ^~~
